# platform.core.appfw.libslp-db-util

./: CMakeLists.txt  collation.c  convert.c  db-util.pc.in  project.config  util_func.c
TC/: build.sh  execute.sh
TC/unit/: Makefile  tslist  utc_ApplicationFW_db_util_close.c  utc_ApplicationFW_db_util_open.c  utc_ApplicationFW_db_util_open_with_options.c  utc_MODULE_API_func.c.in
debian/: changelog  control  libslp-db-util-0.postinst.in  rules
include/: collation.h  convert.h  db-util-common.h  db-util-debug.h  db-util.h  util-func.h
packaging/: libslp-db-util.changes  libslp-db-util.spec
